--- a/Reflex/src/CSS/Card-2.css
+++ b/Reflex/src/CSS/Card-2.css
@@ -38,6 +38,7 @@
     font-size: 1.5rem;
     z-index: 1;
     /* bottom: 0; */
+    margin-bottom: 1%;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 1));
     width:100%;
     padding: 1rem;
