--- a/Reflex/src/CSS/services.css
+++ b/Reflex/src/CSS/services.css
@@ -1,7 +1,7 @@
 .services {
     position: relative;
     text-align: center;
-    margin: 20px 0;
+    margin: 0.8rem 0;
     padding: 1rem;
     justify-content: center;
     /* margin-bottom: 2rem; */
@@ -25,7 +25,7 @@
   }
   
   .triangles {
-    max-width: 70%;
+    max-width: 55%;
     height: auto;
   }
 
@@ -49,7 +49,7 @@
     .card {
         border-radius: 1rem;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-        font-size: 0.8rem; 
+        font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
 }
 
@@ -57,7 +57,7 @@
     .card {
         border-radius: 1.2rem;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.075);
-        font-size: 0.9rem; 
+        font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
 }
 
@@ -65,40 +65,53 @@
     .card {
         border-radius: 1.5rem;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        font-size: 1rem; 
+        font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
 }
 
 @media screen and (min-width: 768px) {
     .services-txt {
-      font-size: 25px;
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
   
     .triangles {
-      max-width: 70%;
+      max-width: 50%;
     }
   }
   
   @media screen and (max-width: 768px) {
     .services-txt {
-      font-size: 20px;
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
   
     .triangles {
-      max-width: 60%;
+      max-width: 40%;
     }
   }
   @media screen and (max-width: 480px) {
     .services-txt {
-      font-size: 10px;
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
     }
+    .main-services {
+      display: grid;
+      grid-template-columns: repeat(2, 5fr);
+      gap: 2rem;
+      justify-content: center;
+      /* margin: 0 auto; */
+      /* max-width: 1000px; */
+      width: 100%;
+      margin-left: 2%;
+  }
   
+  .card{
+    width: 90%;
+    height: 90%;
+  }
     .triangles {
       max-width: 55%;
     }
   }
 
-  
   
   
   
