--- a/Reflex/src/CSS/ProductPage.css
+++ b/Reflex/src/CSS/ProductPage.css
@@ -5,11 +5,17 @@
   text-align: left;
 }
 
-.buttons,
 .action-buttons {
   display: flex;
   justify-content: left;
-  flex-wrap: wrap; /* Allows buttons to wrap to new lines */
+  flex-wrap: wrap; 
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
   gap: 20px;
   margin-bottom: 20px;
 }
@@ -22,7 +28,6 @@
   cursor: pointer;
   font-size: 1.1em;
   transition: background 0.3s;
-  
 }
 
 .system-button:hover {
@@ -234,7 +239,6 @@ textarea.input {
   background-color: #9b59b6;
 }
 
-/* Responsive Adjustments */
 @media (max-width: 1040px) {
   .system-item {
     flex-direction: column;
@@ -264,7 +268,6 @@ textarea.input {
   }
 }
 
-/* Smaller screens */
 @media (max-width: 640px) {
   .system-section {
     padding: 10px;
@@ -285,7 +288,7 @@ textarea.input {
   .system-button {
     font-size: 0.9em;
     padding: 0.5rem 1rem;
-    width: 100%; /* Full width on smaller screens */
+    width: 100%; 
   }
 }
 
