--- a/Reflex/src/CSS/ClientPage.css
+++ b/Reflex/src/CSS/ClientPage.css
@@ -17,14 +17,14 @@
   grid-template-columns: repeat(
     auto-fit,
     minmax(250px, 1fr)
-  ); /* Responsive columns */
+  );
   gap: 20px;
   justify-content: center;
 }
 
 .client-card-item {
   position: relative;
-  width: 100%; /* Make width flexible based on grid */
+  width: 100%; 
   height: 250px;
   overflow: hidden;
   border-radius: 8px;
