--- a/Reflex/src/CSS/blog.css
+++ b/Reflex/src/CSS/blog.css
@@ -1,7 +1,6 @@
-.blog-carousel {
-  /* text-align: center; */
-  color: #fff;
-  padding: 0.5rem;
-  /* background-color: #1a1a1a; */
-  /* margin: rem; */
+.blog h1{
+  color:white;
+}
+.blog p{
+  color:white;
 }
