--- a/Reflex/src/CSS/PortfolioPage.css
+++ b/Reflex/src/CSS/PortfolioPage.css
@@ -71,52 +71,48 @@
   max-width: calc(33.33% - 2.5rem);
   height: 12.75rem;
   border-radius: 0.5rem;
-  overflow: visible;
   background-size: cover;
   background-position: center;
   color: white;
   position: relative;
   transition: transform 0.2s;
-  padding: 1rem;
   align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  box-sizing: border-box; 
 }
 
-.project-card:hover {
-  transform: scale(1.05);
+
+.project-main-image img {
+  position: absolute;
+  margin: auto;
+  width: 120%;
+  height: 100%;
+  object-fit: cover;
+  overflow: visible;
 }
+
 .project-main-image {
   position: relative;
-  min-width: 50%;
+  min-width: 60%;
   height: 100%;
   border-radius: 8px;
   overflow: visible;
   z-index: 1;
+  left:5%
 }
-
-.project-main-image img {
-  position: absolute;
-  top: -10%;
-  left: 0;
-  width: 120%;
-  height: 120%;
-  object-fit: cover;
-  overflow: visible;
-  z-index: 3;
-  /* background-color: red; */
-}
-
 .project-details {
-    flex: 1;
-    text-align: right;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end; 
-    /* white-space: nowrap;  */
-    height: 100%;
-    z-index: 10;
-    min-width: 50%;
+  flex: 1;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  height: 100%;
+  z-index: 10;
+  min-width: 50%;
 }
+
 
 .project-details h3 {
     font-size: 1.3rem;
@@ -124,7 +120,8 @@
     text-align: right;
     /* overflow: hidden;
     text-overflow: ellipsis;  */
-    z-index: 8;
+    /* z-index: 8; */
+    margin: 0 5%;
   }
   
 
@@ -135,6 +132,15 @@
   border-radius: 50%;
   transform: scale(1.2);
   background-color: white;
+  margin: 2% 5%;
+}
+
+.project-details .visit-link {
+  display: flex;
+  justify-content: right;
+  align-items: right;
+  padding: 5%;
+  width:100%;
 }
 
 .project-details .visit-link a {
@@ -142,14 +148,101 @@
   text-decoration: none;
   font-size: 0.8rem;
   font-weight: bold;
+  transition: color 0.3s, transform 0.3s;
 }
 
 .project-details .visit-link a:hover {
-  color: #007bff;
-  text-decoration: underline;
+  color: rgb(0, 255, 255);
+  transform: scale(1.1); 
 }
+
+
 .show-more-container {
   display: flex;
   justify-content: center;
   margin: 1% 2%;
+}
+@media (max-width: 1040px) {
+  .project-card {
+    flex: 1 1 calc(50% - 2.5rem);
+    max-width: calc(50% - 2.5rem);
+  }
+
+  .category-button {
+    font-size: 1rem;
+    padding: 0.8rem 1.6rem;
+  }
+
+  .portfolio-projects {
+    padding: 1rem;
+  }
+
+  .project-main-image img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .cover-image {
+    height: 250px;
+  }
+
+  .header-text-content h2 {
+    font-size: 1.5rem;
+  }
+
+  .header-text-content p {
+    font-size: 0.9rem;
+    padding: 0 3%;
+  }
+
+  .category-button {
+    font-size: 0.9rem;
+    padding: 0.8rem 1.2rem;
+  }
+
+  .project-logo {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media (max-width: 580px) {
+  .project-card {
+    flex: 1 1 100%;
+    max-width: 100%;
+    height: 10rem;
+  }
+  .header-text-content h2 {
+    font-size: 1.3rem;
+  }
+
+  .header-text-content p {
+    font-size: 0.8rem;
+  }
+
+  .category-button {
+    font-size: 0.8rem;
+    padding: 0.6rem 1.2rem;
+  }
+
+  .project-details h3 {
+    font-size: 1rem;
+  }
+
+  .show-more-container {
+    margin: 1% 0.5%;
+  }
+  .project-main-image img {
+    width: 80%;
+    height: 100%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .project-main-image img {
+    width: 80%;
+    height: 100%;
+  }
 }
