--- a/Reflex/src/CSS/ClientPage.css
+++ b/Reflex/src/CSS/ClientPage.css
@@ -7,24 +7,21 @@
   font-weight: bold;
   font-size: 1.6rem;
   text-align: center;
-  margin-bottom: 20px;
-  padding: 10px;
+  margin: 2rem;
+  /* padding: 10px; */
   color: white;
 }
 
 .client-gallery {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(250px, 1fr)
-  );
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   justify-content: center;
 }
 
 .client-card-item {
   position: relative;
-  width: 100%; 
+  width: 100%;
   height: 250px;
   overflow: hidden;
   border-radius: 8px;
