--- a/Reflex/src/CSS/Navigation.css
+++ b/Reflex/src/CSS/Navigation.css
@@ -11,13 +11,15 @@
 .logo,
 .reflex-logo {
   width: 45px;
-  padding: 0px 5px;
+  padding: 0px 0.2rem;
 }
 
 .nav-links {
   display: flex;
   list-style: none;
-  margin: 0;
+  margin: auto;
+  position: relative;
+  justify-content: center;
 }
 
 .nav-links li {
@@ -30,6 +32,7 @@
   font-size: 1rem;
   transition: color 0.3s;
 }
+
 
 .nav-links a:hover {
   color: #ffffff;
