--- a/Reflex/src/CSS/blogcard.css
+++ b/Reflex/src/CSS/blogcard.css
@@ -1,157 +1,80 @@
-/* Base styles */
+.blog {
+  display: flex;
+  flex-direction: column;
+  min-height: auto;
+}
+
 .blog-card {
-    display: flex;
-    color: #fff;
-    width: 80%;
-    margin: 0 auto;
-    max-height: 23rem;
-    /* border-radius: 12%; */
-  }
-  
-  .blog-text {
-    font-size: 1.5rem;
-    color: white;
-    text-align: center;
-    margin-top: 2rem;
-  }
-  
-  .blog-subtext {
-    font-size: 1rem;
-    color: white;
-    text-align: center;
-  }
-  
-  .blog-image {
-    width: 50%;
-    height: 15.625rem;
-    object-fit: cover;
-    border-radius: 5%;
-    margin: auto;
-  }
-  
-  .blog-content {
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .blog-content h2 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-    text-align: left;
-  }
-  
-  .blog-content p {
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-bottom: 1.5rem;
-    text-align: left;
-  }
-  
-  @media (max-width: 1200px) {
-    .blog-card {
-      width: 80%;
-      border-radius: 15%;
-    }
-    /* .blog-text {
-      font-size: 1.2rem;
-    }
-    .blog-subtext {
-      font-size: 0.9rem;
-    } */
-    .blog-image {
-      width: 45%;
-      height: 13rem;
-    }
-    .blog-content h2 {
-      font-size: 1.6rem;
-    }
-    .blog-content p {
-      font-size: 0.9rem;
-    }
-  }
-  
-  @media (max-width: 992px) {
-    .blog-card {
-      flex-direction: column;
-      align-items: center;
-    }
-    /* .blog-text {
-      font-size: 1rem;
-    } 
-    .blog-subtext {
-      font-size: 0.8rem;
-    } */
-    .blog-image {
-      width: 90%;
-      height: 12rem;
-    }
-    .blog-content h2 {
-      font-size: 1.4rem;
-    }
-    .blog-content p {
-      font-size: 0.85rem;
-    }
-  }
-  
-  @media (max-width: 768px) {
-    .blog-card {
-      width: 90%;
-    }
-    /* .blog-text {
-      font-size: 0.9rem;
-    } 
-    .blog-subtext {
-      font-size: 0.7rem;
-    } */
-    .blog-image {
-      width: 100%;
-      height: 10rem;
-    }
-    .blog-content h2 {
-      font-size: 1.2rem;
-    }
-    .blog-content p {
-      font-size: 0.75rem;
-    }
-  }
-  
-  @media (max-width: 576px) {
-    /* .blog-text {
-      font-size: 0.7rem;
-    }
-    .blog-subtext {
-      font-size: 0.6rem;
-    } */
-    .blog-image {
-      width: 90%;
-      height: 8rem;
-    }
-    .blog-content h2 {
-      font-size: 1rem;
-    }
-    .blog-content p {
-      font-size: 0.6rem;
-    }
-  }
-  
-  @media (max-width: 400px) {
-    /* .blog-text {
-      font-size: 0.6rem;
-    }
-    .blog-subtext {
-      font-size: 0.5rem;
-    } */
-    .blog-image {
-      width: 90%;
-      height: 6rem;
-    }
-    .blog-content h2 {
-      font-size: 0.9rem;
-    }
-    .blog-content p {
-      font-size: 0.5rem;
-    }
-  }
-  
+  display: flex;
+  color: #fff;
+  width: 80%;
+  margin: 0 auto;
+  max-height: auto;
+  /* background-color: rgb(54, 49, 49); */
+  border-radius: 15px;
+}
+
+.author-main {
+  font-size: 16px;
+  color: #f1f1f1; 
+  display: inline; 
+  font-style: italic;
+}
+
+.author-main .author {
+  font-style: normal;
+  /* color: #00bfff;
+  color: #32cd32;
+  color: #ff1493; */
+  color: #9b59b6;
+  font-weight: bold; 
+}
+
+
+.blog-text {
+  font-size: 1.5rem;
+  color: white;
+  text-align: center;
+  /* margin-top: 2rem; */
+}
+
+.blog-subtext {
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+}
+
+.blog-image {
+  width: 50%;
+  height: 15.625rem;
+  object-fit: cover;
+  border-radius: 5%;
+  margin: auto;
+}
+
+.blog-content {
+  /* padding: 2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-grow: 1;
+  /* margin-bottom: 1.5rem; */
+  overflow: hidden;
+}
+
+.blog-content h2 {
+  font-size: 1.8rem;
+  margin-bottom: 0.8rem;
+  text-align: left;
+}
+
+.blog-content p {
+  font-size: 1rem;
+  /* line-height: 1.5; */
+  margin-bottom: 1rem;
+  text-align: left;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-align: justify;
+}
