--- a/Reflex/src/StartProjectPage.css
+++ b/Reflex/src/StartProjectPage.css
@@ -1,71 +1,80 @@
 .start-project-page-container {
-    display: flex;
-    background-color: #12111c;
-    color: #ffffff;
-    width: 90%;
-    margin: 0 auto;
-    min-height: 100vh;
+  display: flex;
+  background-color: #12111c;
+  color: #ffffff;
+  width: 90%;
+  margin: 0 auto;
+  min-height: 100vh;
 }
 
-.form-left-section {
-    width: 60%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
+.form-left-container {
+  width: 60%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+.form-left-container form {
+margin-top: 3%;
 }
 
-.form-right-section {
-    width: 40%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
-    background-image: url('./assets/image/startprojectbc.jpg');
-    background-position: center;
-    background-size: cover;
+.form-right-container {
+  width: 40%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  background-image: url("./assets/image/startprojectbc.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
-.project-form-wrapper {
-    width: 100%;
-    padding: 1rem;
+.form-wrapper {
+  width: 100%;
+  padding: 1rem;
 }
-.project-form form {
+.form-section form {
   display: flex;
   flex-wrap: wrap;
 }
 
-.project-form h1 {
-    font-size: 2rem;
+.form-section h1 {
+  font-size: 2rem;
 }
 
-.input-group {
+.input-container {
+  position: relative;
+  margin-bottom: 1.875rem;
+  width: 50%;
+  padding: 2%;
+}
+
+.message-container {
+  position: relative;
+  margin-bottom: 1.875rem;
+  width: 100%;
+  padding: 2%;
+}
+
+.file-input-container {
+  position: relative;
+  margin-bottom: 1.875rem;
+  width: 100%;
+  padding: 2%;
+}
+
+.input-container {
     position: relative;
     margin-bottom: 1.875rem;
-    /* display: flex; */
     width: 50%;
     padding: 2%;
 }
-.input-group-msg{
-       position: relative;
-    margin-bottom: 1.875rem;
-    /* display: flex; */
-    width: 100%;
-    padding: 2%;
-}
-.input-group-doc{
+.input-container-others {
     position: relative;
     margin-bottom: 1.875rem;
-    /* display: flex; */
     width: 100%;
     padding: 2%;
 }
-.input-group-dropdown {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 
 .input-field {
     font-size: 1rem;
@@ -100,45 +109,83 @@ label {
 }
 
 .dropdown {
-    background-color: #000;
-    color: #fff;
-    padding: 0.625rem;
-    border-radius: 5px;
-    border: none;
-    width: 85%;
+  background-color: #000;
+  color: #fff;
+  padding: 0.625rem;
+  border-radius: 5px;
+  border: none;
+  width: 85%;
 }
 
 .dropdown-btn {
-    background-color: #ffffff;
-    color: #12111c;
-    padding: 0.625rem;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-left: 1rem;
+  background-color: #ffffff;
+  color: #12111c;
+  padding: 0.625rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-left: 1rem;
 }
 
 .dropdown-wrapper {
-    display: flex;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
-.form-submit-button {
-    width: 100%;
-    padding: 0.625rem;
-    background-color: #ffffff;
-    color: #12111c;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    border-radius: 0.3125rem;
+.submit-button {
+  width: 100%;
+  padding: 0.625rem;
+  background-color: #ffffff;
+  color: #12111c;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.3125rem;
 }
 
-.form-right-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
-    text-align: left;
+.form-right-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem;
+  text-align: left;
 }
+@media (max-width: 820px) {
+    .start-project-page-container {
+      flex-direction: column;
+      width: 100%;
+    }
+  
+    .form-left-container,
+    .form-right-container {
+      width: 100%;
+    }
+  
+    .form-left-container {
+      padding: 1rem 0;
+    }
+  
+    .form-right-container {
+      padding: 1rem 0;
+      background-size: cover;
+      background-position: center;
+    }
+  
+    .input-container,
+    .message-container,
+    .file-input-container,
+    .input-container-others {
+      width: 100%;
+    }
+  
+    .dropdown,
+    .dropdown-btn {
+      width: 100%;
+    }
+  
+    .submit-button {
+      width: 100%;
+    }
+  }
+  
