--- a/Reflex/src/CSS/PortfolioPage.css
+++ b/Reflex/src/CSS/PortfolioPage.css
@@ -32,9 +32,12 @@
 
 .category-buttons {
   display: flex;
+  width: 80%;
+  flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
   margin-bottom: 20px;
+  margin:auto;
 }
 
 .category-button {
@@ -118,9 +121,6 @@
     font-size: 1.3rem;
     width: 100%; 
     text-align: right;
-    /* overflow: hidden;
-    text-overflow: ellipsis;  */
-    /* z-index: 8; */
     margin: 0 5%;
   }
   
