--- a/Reflex/src/CSS/button.css
+++ b/Reflex/src/CSS/button.css
@@ -22,6 +22,7 @@
 .start-project:hover {
     background: linear-gradient(90deg, blue, purple);
     transition: transform 0.3s, box-shadow 0.3s;
+    color: #FFF;
 }
 
 .start-project::before {
