--- a/Reflex/src/CSS/ClientPage.css
+++ b/Reflex/src/CSS/ClientPage.css
@@ -1,7 +1,7 @@
 .client-gallery-wrapper {
-  padding: 0rem 5rem;
+  padding: 0rem 2rem;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: auto;
 }
 .client-text-h4 {
   font-weight: bold;
@@ -14,7 +14,7 @@
 
 .client-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   justify-content: center;
 }
@@ -25,7 +25,9 @@
   height: 250px;
   overflow: hidden;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: rgb(115, 129, 174);
+  box-shadow: 0 0 8px rgba(82, 113, 255, 0.5), 0 0 15px rgba(82, 113, 255, 0.4),
+  0 0 25px rgba(82, 113, 255, 0.3);
   transition: transform 0.3s ease;
 }
 
@@ -46,7 +48,7 @@
 
 .client-card-name {
   position: absolute;
-  bottom: 10px;
+  bottom: 0px;
   left: 0;
   right: 0;
   text-align: center;
