--- a/Reflex/src/CSS/ContactPage.css
+++ b/Reflex/src/CSS/ContactPage.css
@@ -28,7 +28,8 @@
   background: linear-gradient(#12111c, #12111c) padding-box,
     linear-gradient(90deg, #452ed2, #9747ff, #250d40, #6647ff) border-box;
   border: 0.2rem solid transparent;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 8px rgba(82, 113, 255, 0.5), 0 0 15px rgba(82, 113, 255, 0.4),
+    0 0 25px rgba(82, 113, 255, 0.3);
 }
 
 .consultant-form h1 {
