--- a/Reflex/src/CSS/Navigation.css
+++ b/Reflex/src/CSS/Navigation.css
@@ -26,19 +26,40 @@
   margin: 0 1rem;
 }
 
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0;
+  list-style: none;
+}
+
 .nav-links a {
   color: white;
   text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s;
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding: 5px 5px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  position: relative;
 }
-
 
 .nav-links a:hover {
   color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.2); 
+  text-decoration: none;
   text-shadow: -3px 0 10px rgba(0, 0, 255, 0.7), 3px 0 10px rgba(0, 0, 255, 0.7),
     0 0 15px rgba(82, 113, 255, 1), 0 0 10px rgba(45, 193, 255, 0.8);
+  box-shadow: 0px 4px 15px rgba(0, 0, 255, 0.3); 
+  font-size: 1rem;
 }
+
+.nav-links a:hover, .nav-links a:focus {
+  outline: none; 
+}
+
+
 
 .menu-icon {
   display: none;
@@ -192,7 +213,7 @@
 }
 
 .nav-links.closing {
-  animation: slideUp 0.3s ease forwards;
+  animation: slideUp 0.3s ease ;
   opacity: 0;
 }
 
