--- a/Reflex/src/CSS/card.css
+++ b/Reflex/src/CSS/card.css
@@ -1,162 +1,161 @@
 .card-container {
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-between;
-    align-items: center;
-    width: 100%; 
-    height: 100%;
-    /* padding: 1rem; */
-    border-radius: 15px;
-    background: linear-gradient(#12111C, #12111C) padding-box,
-                linear-gradient(180deg, blue, purple) border-box;
-    border: 0.1rem solid transparent;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* padding: 1rem; */
+  border-radius: 15px;
+  background: linear-gradient(#12111c, #12111c) padding-box,
+    linear-gradient(180deg, blue, purple) border-box;
+  border: 0.1rem solid transparent;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 0 8px rgba(82, 113, 255, 0.5), 0 0 15px rgba(82, 113, 255, 0.4),
+    0 0 25px rgba(82, 113, 255, 0.3);
 }
 
 .card-image {
-    width: 40%; 
-    overflow: hidden;
-    border-radius: 8%;
-    cursor: pointer;
+  width: 40%;
+  overflow: hidden;
+  border-radius: 8%;
+  cursor: pointer;
 }
 
 .card-image img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .card-content {
-    width: 55%; 
-    text-align: center; 
-    padding-left: 1rem;
-    justify-content: center; 
+  width: 55%;
+  text-align: center;
+  padding-left: 1rem;
+  justify-content: center;
 }
 
 .title {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #ffffff;
-    margin-bottom: 0.5rem;
-    cursor: pointer;
-    margin-left: -50%;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #ffffff;
+  margin-bottom: 0.5rem;
+  cursor: pointer;
+  margin-left: -50%;
 }
 
 .description {
-    color: #ffffff; 
-    font-size: 1.050rem; 
-    /* line-height: 1.5;  */
-    cursor: pointer;
-    text-align: center; 
-    margin-bottom: 7%;
-    padding: 2%;
+  color: #ffffff;
+  font-size: 1.05rem;
+  /* line-height: 1.5;  */
+  cursor: pointer;
+  text-align: center;
+  margin-bottom: 7%;
+  padding: 2%;
 }
 
 @media only screen and (max-width: 768px) {
-    .card-container {
-        flex-direction: column; 
-        padding: 0.5rem;
-    }
+  .card-container {
+    flex-direction: column;
+    padding: 0.5rem;
+  }
 
-    .card-image {
-        width: 100%;
-        border-radius: 0;
-    }
+  .card-image {
+    width: 100%;
+    border-radius: 0;
+  }
 
-    .card-content {
-        width: 100%;
-        padding-left: 0;
-    }
+  .card-content {
+    width: 100%;
+    padding-left: 0;
+  }
 
-    .title {
-        font-size: 0.69rem;
-    
-         margin-right: -50%;
-        
-    }
+  .title {
+    font-size: 0.69rem;
 
-    .description {
-        font-size: 0.86rem;
-        /* padding: 5px; */
-        /* margin: 5%; */
-    }
+    margin-right: -50%;
+  }
+
+  .description {
+    font-size: 0.86rem;
+    /* padding: 5px; */
+    /* margin: 5%; */
+  }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
-    .card-image {
-        width: 45%;
-    }
+  .card-image {
+    width: 45%;
+  }
 
-    .card-content {
-        width: 50%; 
-    }
+  .card-content {
+    width: 50%;
+  }
 
-    .title {
-        font-size: 0.7rem;
-    }
+  .title {
+    font-size: 0.7rem;
+  }
 
-    .description {
-        font-size: 0.66rem;
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.66rem;
+    /* padding: 5px; */
+  }
 }
 
 @media only screen and (min-width: 993px) {
-    .card-image {
-        width: 40%;
-    }
+  .card-image {
+    width: 40%;
+  }
 
-    .card-content {
-        width: 55%;
-    }
+  .card-content {
+    width: 55%;
+  }
 
-    .title {
-        font-size: 1.2rem;
-    }
+  .title {
+    font-size: 1.2rem;
+  }
 
-    .description {
-        font-size: 0.8rem;
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.8rem;
+    /* padding: 5px; */
+  }
 }
 
 @media only screen and (max-width: 680px) {
-    .description {
-        font-size: 0.8rem; 
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.8rem;
+    /* padding: 5px; */
+  }
 }
 @media only screen and (max-width: 650px) {
-    .description {
-        font-size: 0.7rem; 
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.7rem;
+    /* padding: 5px; */
+  }
 }
 @media only screen and (max-width: 608px) {
-    .description {
-        font-size: 0.645rem; 
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.645rem;
+    /* padding: 5px; */
+  }
 }
 @media only screen and (max-width: 580px) {
-    .description {
-        font-size: 0.6rem; 
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.6rem;
+    /* padding: 5px; */
+  }
 }
 @media only screen and (max-width: 515px) {
-    .description {
-        font-size: 0.550rem; 
-        /* padding: 5px; */
-    }
+  .description {
+    font-size: 0.55rem;
+    /* padding: 5px; */
+  }
 }
 
-
-
 @media only screen and (max-width: 420px) {
-    .description {
-        font-size: 0.5rem; 
-    }
+  .description {
+    font-size: 0.5rem;
+  }
 }
