--- a/Reflex/src/CSS/ceo.css
+++ b/Reflex/src/CSS/ceo.css
@@ -12,6 +12,8 @@
     linear-gradient(90deg, #452ed2, #9747ff, #250d40, #6647ff) border-box;
   border: 0.2rem solid transparent;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 8px rgba(82, 113, 255, 0.5), 0 0 15px rgba(82, 113, 255, 0.4),
+    0 0 25px rgba(82, 113, 255, 0.3);
   overflow: hidden;
   cursor: pointer;
   text-align: center;
@@ -90,26 +92,26 @@
 
 @media (max-width: 820px) {
   .ceo-card-container {
-    flex-direction: column; 
-    align-items: center; 
-    padding: 1rem; 
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
   }
 }
 
 @media (max-width: 640px) {
   .ceo-card-header {
-    font-size: 1.3rem; 
+    font-size: 1.3rem;
   }
   .ceo-card-description {
-    font-size: 0.9rem; 
+    font-size: 0.9rem;
   }
 }
 
 @media (max-width: 480px) {
   .ceo-team-text {
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
   }
   .ceo-team-subtext {
-    font-size: 0.7rem; 
+    font-size: 0.7rem;
   }
 }
