--- a/Reflex/src/CSS/client.css
+++ b/Reflex/src/CSS/client.css
@@ -32,7 +32,7 @@
     width: 80%;
     height: 120%;
     background: rgba(0, 150, 255, 0.3);
-    border-radius: 50%;  /* Ensures the light is circular */
+    border-radius: 50%;  
     filter: blur(50px);
     z-index: -1;
     pointer-events: none;
