--- a/Reflex/src/CSS/footer.css
+++ b/Reflex/src/CSS/footer.css
@@ -10,8 +10,9 @@
   border-radius: 1.5rem;
   background: linear-gradient(#000000, #000000) padding-box,
     linear-gradient(90deg, #452ed2, #9747ff, #250d40, #6647ff) border-box;
+  box-shadow: 0 0 8px rgba(82, 113, 255, 0.5), 0 0 15px rgba(82, 113, 255, 0.4),
+    0 0 25px rgba(82, 113, 255, 0.3);
   border: 0.2rem solid transparent;
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.2);
 }
 
 .contact-container {
@@ -40,7 +41,6 @@
 
 .contact-btn .button {
   white-space: nowrap;
-  font-family: Arial, sans-serif;
   font-size: 1.1rem;
   color: #ffffff;
   background-color: #007bff;
@@ -168,7 +168,6 @@
   height: auto;
 }
 
-
 .content-mid,
 .content-right {
   width: 45%;
@@ -230,8 +229,6 @@ ul li a:hover {
   align-items: center;
   gap: 15px;
 }
-
-
 
 @media (max-width: 1040px) {
   .footer-container {
