--- a/Reflex/src/CSS/rocket.css
+++ b/Reflex/src/CSS/rocket.css
@@ -160,11 +160,11 @@
   }
 }
 
-.item-txt {
-  font-size: 20px;
+.item-txt{
+  font-size: 1rem;
+  font-family: "Zen Dots";
   text-align: center;
-  color: #00376b;
-  -webkit-text-stroke: 0.5px rgb(255, 255, 255);
+  color: white;
 }
 
 @media (max-width: 820px) {
@@ -185,20 +185,21 @@
   }
 }
 
-.item1 .item-txt,
+/* .item1 .item-txt,
 .item2 .item-txt,
 .item3 .item-txt,
 .item4 .item-txt,
 .item5 .item-txt {
   font-family: "Roboto", sans-serif;
-}
+} */
 
 .reflex-text {
   text-align: center;
   margin-top: 1rem;
   font-size: 1.5rem;
   color: white;
-  z-index: 10; /* Ensure it’s above the background */
+  z-index: 10;
+  font-family: "Zen Dots";
 }
 
 @media (max-width: 840px) {
