--- a/Reflex/src/CSS/socials.css
+++ b/Reflex/src/CSS/socials.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    z-index: 1000; /* Ensures it floats above other elements */
+    z-index: 1000; 
     padding: 10px;
     background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,50,0.8) 100%);
     border-radius: 10px 0 0 10px;
@@ -22,7 +22,7 @@
   
   .social-icon:hover {
     transform: scale(1.2);
-    color: #f8e71c; /* Gives a glow effect on hover */
+    color: #1c70f8; 
   }
   
   body {
