--- a/Reflex/src/CSS/blog.css
+++ b/Reflex/src/CSS/blog.css
@@ -20,3 +20,54 @@
   justify-content: center;
   padding: 0% 20% 2% 20%;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin: 20px 10%;
+  flex-wrap: wrap;
+}
+
+.page-button {
+  margin: 5px;
+  padding: 8px 12px;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.page-button.active {
+  background-color: #211472;
+  color: white;
+  font-weight: bold;
+}
+
+.page-button:hover {
+  background-color: #9747ff;
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .pagination {
+    margin: 10px 5%;
+  }
+
+  .page-button {
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .pagination {
+    align-items: center;
+  }
+
+  .page-button {
+    width:auto;
+    flex-wrap: wrap;
+    text-align: center;
+    margin: 5px 0;
+  }
+}
